[gd_scene load_steps=10 format=3 uid="uid://b2utbwgb8sip2"]

[ext_resource type="Script" path="res://scenes/main/bathroom_scene.gd" id="1_oq468"]
[ext_resource type="Texture2D" uid="uid://dfkv7jetitxou" path="res://assets/In-between screen/background.png" id="1_u4f7u"]
[ext_resource type="Texture2D" uid="uid://btvggfcbhvlaa" path="res://assets/In-between screen/bathroom.png" id="2_vrt76"]
[ext_resource type="SpriteFrames" uid="uid://dybs228lbkxxm" path="res://assets/animations/health_frame.tres" id="4_l1ojw"]
[ext_resource type="AudioStream" uid="uid://b7382vpae7w7e" path="res://assets/wav/Gameplay Elements/Potion/WW_Potion_Drink_Drinking_01.wav" id="5_heeb7"]
[ext_resource type="SpriteFrames" uid="uid://1vqar3lkd7rt" path="res://assets/animations/potion_drink.tres" id="5_pjonl"]
[ext_resource type="AudioStream" uid="uid://cgsjcb4lxfymx" path="res://assets/wav/Gameplay Elements/Potion/WW_Potion_Drink_Stopper_01.wav" id="6_2mswm"]
[ext_resource type="Texture2D" uid="uid://d0xre6rrrkkac" path="res://assets/Mini games/hand-mouseleft.png" id="6_7p1pr"]
[ext_resource type="Theme" uid="uid://bkar4nae0cei3" path="res://resources/wellfleet.tres" id="7_xf484"]

[node name="BathroomScene" type="Node2D"]
script = ExtResource("1_oq468")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_u4f7u")

[node name="MainContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
offset_right = 400.0
offset_bottom = 226.0

[node name="TextureRect2" type="TextureRect" parent="MainContainer"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
texture = ExtResource("2_vrt76")

[node name="Avatar" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
position = Vector2(34, 186)
sprite_frames = ExtResource("4_l1ojw")
frame = 3

[node name="DrinkSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_heeb7")
volume_db = 11.243

[node name="PopSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_2mswm")
volume_db = 11.243

[node name="Player" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
position = Vector2(194, 119)
sprite_frames = ExtResource("5_pjonl")

[node name="NextLevel" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
offset_left = 373.0
offset_top = 200.0
offset_right = 413.0
offset_bottom = 240.0
texture = ExtResource("6_7p1pr")
stretch_mode = 2

[node name="Label" type="Label" parent="NextLevel"]
layout_mode = 0
offset_left = -42.0
offset_top = -18.0
offset_right = 39.0
offset_bottom = 5.0
theme = ExtResource("7_xf484")
theme_override_font_sizes/font_size = 12
text = "Next level"
